# disbatch

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md
.github/workflows/: release.yml
examples/: analyzer-demo.ps1  batch-demo.bat  demo.ps1  demo.ps1.disbatch.json  parser-clean.ps1  parser-tricky.ps1
src/: analyzer.rs  main.rs  model.rs  parser.rs  psparse.rs  sidecar.rs  terminal.rs
